feat: Refactor CheckResult, Document, and User repositories to improve data handling and add new features
- Updated CheckResultRepositoryAdapter to include compliance score and rule set details.
- Enhanced DocumentRepositoryAdapter to filter out deleted documents and added type resolution for document content.
- Modified UserRepositoryAdapter to use display name instead of username and added account lock features.
- Introduced AuditService for logging audit records in a separate transaction.
- Created new event system for document check requests to be sent to Kafka after transaction commits.
- Added new database changelogs for roles, users, documents, check results, violations, audit logs, rule sets, check strategy settings, and refresh tokens.
- Improved entity mappings and relationships in JPA entities for better data integrity and performance.